--- a/02-Spring-annotations/.classpath
+++ b/02-Spring-annotations/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/spring-aop-5.1.7.RELEASE-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/spring-aop-5.1.7.RELEASE-sources.jar"/>
 	<classpathentry kind="lib" path="lib/spring-aop-5.1.7.RELEASE.jar"/>
